[gd_scene load_steps=15 format=2]

[ext_resource path="res://backgrounds/GameOver.jpg" type="Texture" id=1]
[ext_resource path="res://fonts/Score.tres" type="DynamicFont" id=2]
[ext_resource path="res://fonts/font.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://scripts/Violeta.gd" type="Script" id=4]
[ext_resource path="res://scenes/Triangulito.tscn" type="PackedScene" id=5]
[ext_resource path="res://textures/Violeta.png" type="Texture" id=6]
[ext_resource path="res://backgrounds/Background.jpg" type="Texture" id=7]
[ext_resource path="res://scenes/Rombito.tscn" type="PackedScene" id=8]
[ext_resource path="res://backgrounds/BlackBackground.jpg" type="Texture" id=9]
[ext_resource path="res://scripts/Game.gd" type="Script" id=10]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 28.4944

[sub_resource type="DynamicFont" id=3]
size = 48
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 21
font_data = ExtResource( 3 )

[node name="Game" type="Node2D"]
script = ExtResource( 10 )
rombito = ExtResource( 8 )
triangulito = ExtResource( 5 )

[node name="Violeta" type="KinematicBody2D" parent="."]
position = Vector2( 0.000488281, -0.000442505 )
script = ExtResource( 4 )

[node name="Dash" type="Timer" parent="Violeta"]
wait_time = 0.4

[node name="VioletaSprite" type="AnimatedSprite" parent="Violeta"]
position = Vector2( -0.104212, 0.202454 )
scale = Vector2( 0.242357, 0.233737 )
frames = SubResource( 1 )

[node name="VioletaCollision" type="CollisionShape2D" parent="Violeta"]
position = Vector2( -0.375975, 0.000396729 )
shape = SubResource( 2 )

[node name="Score" type="Label" parent="."]
margin_left = 47.0
margin_top = 39.0
margin_right = 98.0
margin_bottom = 57.0
rect_scale = Vector2( 2, 2 )
custom_fonts/font = ExtResource( 2 )
text = "Score:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreQuantity" type="Label" parent="Score"]
margin_left = 76.5
margin_top = 0.5
margin_right = 126.5
margin_bottom = 22.5
custom_fonts/font = ExtResource( 2 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameBackground" type="Sprite" parent="."]
visible = false
position = Vector2( 516, 300 )
scale = Vector2( 0.79375, 0.833333 )
z_index = -2
texture = ExtResource( 7 )

[node name="RombitosTimer" type="Timer" parent="."]
wait_time = 6.0

[node name="TriangulosTimer" type="Timer" parent="."]
wait_time = 1.5

[node name="GameOver" type="CanvasLayer" parent="."]

[node name="GameOverBackground" type="Sprite" parent="GameOver"]
position = Vector2( 512.5, 301 )
scale = Vector2( 1.7339, 1.8012 )
texture = ExtResource( 1 )

[node name="PlayAgainButton" type="Button" parent="GameOver"]
process_priority = 1
margin_left = 448.0
margin_top = 408.0
margin_right = 560.0
margin_bottom = 448.0
text = "Play again"
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": "Play Again
"
}

[node name="HighScoresButton" type="Button" parent="GameOver"]
margin_left = 448.0
margin_top = 472.0
margin_right = 560.0
margin_bottom = 512.0
text = "High Scores"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HighScores" type="CanvasLayer" parent="."]

[node name="HighScoreBackground" type="Sprite" parent="HighScores"]
visible = false
position = Vector2( 512, 300 )
scale = Vector2( 0.8, 0.833333 )
texture = ExtResource( 9 )

[node name="HighScores" type="Label" parent="HighScores"]
visible = false
margin_left = 360.0
margin_top = 120.0
margin_right = 633.0
margin_bottom = 168.0
custom_fonts/font = SubResource( 3 )
text = "High Scores"
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="FirstPosition" type="Label" parent="HighScores"]
visible = false
margin_left = 448.0
margin_top = 192.0
margin_right = 472.0
margin_bottom = 214.0
custom_fonts/font = SubResource( 4 )
text = "1:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="Label" parent="HighScores/FirstPosition"]
margin_left = 32.0
margin_right = 101.0
margin_bottom = 47.0
custom_fonts/font = ExtResource( 2 )
text = "100000
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SecondPosition" type="Label" parent="HighScores"]
visible = false
margin_left = 448.0
margin_top = 224.0
margin_right = 472.0
margin_bottom = 246.0
custom_fonts/font = SubResource( 4 )
text = "2:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="Label" parent="HighScores/SecondPosition"]
margin_left = 32.0
margin_right = 101.0
margin_bottom = 47.0
custom_fonts/font = ExtResource( 2 )
text = "100000
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ThirdPosition" type="Label" parent="HighScores"]
visible = false
margin_left = 448.0
margin_top = 256.0
margin_right = 472.0
margin_bottom = 278.0
custom_fonts/font = SubResource( 4 )
text = "3:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="Label" parent="HighScores/ThirdPosition"]
margin_left = 32.0
margin_right = 101.0
margin_bottom = 47.0
custom_fonts/font = ExtResource( 2 )
text = "100000
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FourthPosition" type="Label" parent="HighScores"]
visible = false
margin_left = 448.0
margin_top = 288.0
margin_right = 472.0
margin_bottom = 310.0
custom_fonts/font = SubResource( 4 )
text = "4:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="Label" parent="HighScores/FourthPosition"]
margin_left = 32.0
margin_right = 101.0
margin_bottom = 47.0
custom_fonts/font = ExtResource( 2 )
text = "100000
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FifthPosition" type="Label" parent="HighScores"]
visible = false
margin_left = 448.0
margin_top = 320.0
margin_right = 472.0
margin_bottom = 342.0
custom_fonts/font = SubResource( 4 )
text = "5:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="Label" parent="HighScores/FifthPosition"]
margin_left = 32.0
margin_right = 101.0
margin_bottom = 47.0
custom_fonts/font = ExtResource( 2 )
text = "100000
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SixthPosition" type="Label" parent="HighScores"]
visible = false
margin_left = 448.0
margin_top = 352.0
margin_right = 472.0
margin_bottom = 374.0
custom_fonts/font = SubResource( 4 )
text = "6:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="Label" parent="HighScores/SixthPosition"]
margin_left = 32.0
margin_right = 101.0
margin_bottom = 47.0
custom_fonts/font = ExtResource( 2 )
text = "100000
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SeventhPosition" type="Label" parent="HighScores"]
visible = false
margin_left = 448.0
margin_top = 384.0
margin_right = 472.0
margin_bottom = 406.0
custom_fonts/font = SubResource( 4 )
text = "7:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="Label" parent="HighScores/SeventhPosition"]
margin_left = 32.0
margin_right = 101.0
margin_bottom = 47.0
custom_fonts/font = ExtResource( 2 )
text = "100000
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EighthPosition" type="Label" parent="HighScores"]
visible = false
margin_left = 448.0
margin_top = 416.0
margin_right = 472.0
margin_bottom = 438.0
custom_fonts/font = SubResource( 4 )
text = "8:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="Label" parent="HighScores/EighthPosition"]
margin_left = 32.0
margin_right = 101.0
margin_bottom = 47.0
custom_fonts/font = ExtResource( 2 )
text = "100000
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinthPosition" type="Label" parent="HighScores"]
visible = false
margin_left = 448.0
margin_top = 448.0
margin_right = 472.0
margin_bottom = 470.0
custom_fonts/font = SubResource( 4 )
text = "9:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="Label" parent="HighScores/NinthPosition"]
margin_left = 32.0
margin_right = 101.0
margin_bottom = 47.0
custom_fonts/font = ExtResource( 2 )
text = "100000
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TenthPosition" type="Label" parent="HighScores"]
visible = false
margin_left = 448.0
margin_top = 480.0
margin_right = 474.0
margin_bottom = 502.0
custom_fonts/font = SubResource( 4 )
text = "10:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="Label" parent="HighScores/TenthPosition"]
margin_left = 32.0
margin_right = 101.0
margin_bottom = 47.0
custom_fonts/font = ExtResource( 2 )
text = "100000
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayAgainButton" type="Button" parent="HighScores"]
visible = false
margin_left = 448.0
margin_top = 520.0
margin_right = 544.0
margin_bottom = 552.0
text = "Play Again"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="timeout" from="Violeta/Dash" to="Violeta" method="_on_Dash_timeout"]
[connection signal="timeout" from="RombitosTimer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="TriangulosTimer" to="." method="_on_TriangulosTimer_timeout"]
[connection signal="pressed" from="GameOver/PlayAgainButton" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="GameOver/HighScoresButton" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="HighScores/PlayAgainButton" to="." method="_on_PlayAgainButton_pressed"]
